# photon

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  photon.sublime-project  photon.sublime-workspace  requirements.txt
assets/: CMakeLists.txt  distmap.glsl  gui.glsl  particles.glsl  platformer.glsl
assets/player/: .gitignore  spritesheet.py
assets/tiles/: spritesheet.aseprite  tilemap.xcf
experiments/: OpenSimplexNoise2.java  OpenSimplexNoise2S.java  db.hpp  platformer_bak.cpp  tiles.cpp  world_old.cpp
experiments/3d/: crosshair.glsl  glitch.glsl  main.glsl
experiments/gui/: glhelper.hpp  gui.hpp  main.cpp
experiments/networking/: server.cpp  server.hpp
experiments/vulkan/: graviton.hpp  photon.cpp  photon.hpp  photon_camera.cpp  photon_gui.cpp  photon_script.cpp  photon_vulkan.cpp  test.cpp  vkdev.cpp  vkhpp.cpp
include/: camera.hpp  chunk.hpp  entity.hpp  gui.hpp  particles.hpp  photon.hpp  platformer.hpp  player.hpp  resources.hpp  rigidbody.hpp  shader-test.hpp  text.hpp  tile.hpp  world.hpp
include/GLFW/: app.hpp  monitor.hpp  window.hpp
include/freetype/: freetype.hpp
include/glad/: glad.h
include/glfw/: monitor.hpp  window.hpp
include/imgui/: app.hpp
include/math/: math.hpp  matrix.hpp  noise.hpp  quaternion.hpp  vector.hpp
include/network/: statuscodes.hpp  tcpsocket.hpp  tlssocket.hpp
include/opengl/: app.hpp  buffer.hpp  framebuffer.hpp  mesh.hpp  program.hpp  renderbuffer.hpp  shader.hpp  texture.hpp  uniform.hpp  vao.hpp  vertex.hpp  window.hpp
include/photonvk/: buffer.hpp  image.hpp  photonvk.hpp  physicaldevice.hpp  swapchain.hpp  vertex.hpp
include/soloud/: soloud_speech.h
include/sqlite/: sqlite.hpp
include/stb/: stb_vorbis.h
include/tomcrypt/: tomcrypt.h
include/utils/: image.hpp  json.hpp  pixel.hpp  string.hpp  tuple.hpp  yaml.hpp
include/vulkan/: device.hpp  instance.hpp  mesh.hpp
res/: .gitignore  animations.json  gui.glsl  level.json  level.yaml  particles.glsl  platformer.glsl  skybox.glsl  text.glsl  tileset.json
res/player/: .gitignore  spritesheet.py
src/: CMakeLists.txt  camera.cpp  chunk.cpp  entity.cpp  gui.cpp  main.cpp  meshes.cpp  particle-demo.cpp  particles.cpp  photon.cpp  platformer.cpp  player.cpp  resources.cpp  rigidbody.cpp  text.cpp  tile.cpp  world.cpp
src/GLFW/: CMakeLists.txt  app.cpp  monitor.cpp  window.cpp
src/freetype/: freetype.cpp
src/glad/: CMakeLists.txt  glad.c
src/glfw/: app.cpp  monitor.cpp  window.cpp
src/imgui/: CMakeLists.txt  ImFileDialog.cpp  ImGuizmo.cpp  app.cpp  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_vulkan.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/math/: CMakeLists.txt  math.cpp  noise.cpp
src/network/: CMakeLists.txt  statuscodes.cpp  tcpsocket.cpp  tlse.c  tlssocket.cpp
src/opengl/: CMakeLists.txt  app.cpp  framebuffer.cpp  program.cpp  renderbuffer.cpp  shader.cpp  texture.cpp  vao.cpp  window.cpp
src/photonvk/: buffer.cpp  instance.cpp  mesh.cpp  physicaldevice.cpp  swapchain.cpp
src/soloud/: CMakeLists.txt  soloud_wav.cpp  soloud_waveshaperfilter.cpp  soloud_wavstream.cpp
src/spdlog/: CMakeLists.txt
src/sqlite/: CMakeLists.txt  sqlite.cpp
src/stb/: CMakeLists.txt  stb.c  stb_c_lexer.c  stb_connected_components.c  stb_divide.c  stb_ds.c  stb_dxt.c  stb_easy_font.c  stb_herringbone_wang_tile.c  stb_image_resize.c  stb_include.c  stb_perlin.c  stb_rect_pack.c
src/tomcrypt/: CMakeLists.txt
src/tommath/: CMakeLists.txt  bn_s_mp_rand_platform.c
src/utils/: CMakeLists.txt  image.cpp  json.cpp  string.cpp  yaml.cpp
src/vulkan/: CMakeLists.txt  buffer.cpp  device.cpp  image.cpp  instance.cpp  mesh.cpp  physicaldevice.cpp  swapchain.cpp
